--- a/quickstart/config.toml
+++ b/quickstart/config.toml
@@ -1,7 +1,7 @@
-baseURL = "http://example.org/"
+baseurl      = "http://www.viet-nguyen.me/"
+title        = "My Blog"
 languageCode = "en-us"
-title = "My New Hugo Site"
-theme = "hello-friend-ng"
+theme        = "hello-friend-ng"
 paginate     = 10
 
 [params]
@@ -11,7 +11,7 @@ paginate     = 10
   dateformNumTime = "2006-01-02 15:04"
 
   # Subtitle for home
-  homeSubtitle = "A simple and beautiful blog"
+  homeSubtitle = "QA Engineer"
 
   # Set disableReadOtherPosts to true in order to hide the links to other posts.
   disableReadOtherPosts = false
@@ -21,7 +21,7 @@ paginate     = 10
 
   # Metadata mostly used in document's head
   description = "My new homepage or blog"
-  keywords = "homepage, blog"
+  keywords = "homepage, blog, Viet, Nguyen, QA, testing"
   images = [""]
 
 [taxonomies]
@@ -31,14 +31,14 @@ paginate     = 10
 
 [languages]
   [languages.en]
-    title = "Hello Friend NG"
-    subtitle = "A simple theme for Hugo"
+    title = "Viet Nguyen"
+    subtitle = "QA Engineer"
     keywords = ""
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
     readOtherPosts = "Read other posts"
 
     [languages.en.params.logo]
-      logoText = "hello friend ng"
+      logoText = "VN"
       logoHomeLink = "/"
     # or
     #
